force-app/main/default/objects/SBQQ__SummaryVariable__c/SBQQ__SummaryVariable__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__SummaryVariableHelp</customHelpPage>
    <description>Variable that summarizes quote line items.</description>
    <label>Summary Variable</label>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summary Variables</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>