force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__AggregateField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AggregateField__c</fullName>
    <description>Quote Line field that&apos;s acted upon by the aggregate function.</description>
    <inlineHelpText>Quote Line field that&apos;s acted upon by the aggregate function.</inlineHelpText>
    <label>Aggregate Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quantity</fullName><default>false</default><label>Quantity</label></value>
            <value><fullName>Product Code</fullName><default>false</default><label>Product Code</label></value>
            <value><fullName>SBQQ__ListTotal__c</fullName><default>false</default><label>SBQQ__ListTotal__c</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>