force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__AggregateFunction__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AggregateFunction__c</fullName>
    <description>Aggregate function used to calculate this variable.</description>
    <inlineHelpText>Aggregate function used to calculate this variable.</inlineHelpText>
    <label>Aggregate Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Count</fullName><default>false</default><label>Count</label></value>
            <value><fullName>Sum</fullName><default>false</default><label>Sum</label></value>
            <value><fullName>Average</fullName><default>false</default><label>Average</label></value>
            <value><fullName>Min</fullName><default>false</default><label>Min</label></value>
            <value><fullName>Max</fullName><default>false</default><label>Max</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>