force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__CompositeOperator__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CompositeOperator__c</fullName>
    <description>Operator to use in composing this variable with another variable or value to produce final result used in rules.</description>
    <inlineHelpText>Specify how this variable should be composed with Variable Element or Value Element.</inlineHelpText>
    <label>Composite Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Add</fullName><default>false</default><label>Add</label></value>
            <value><fullName>Subtract</fullName><default>false</default><label>Subtract</label></value>
            <value><fullName>Multiply</fullName><default>false</default><label>Multiply</label></value>
            <value><fullName>Divide</fullName><default>false</default><label>Divide</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>