force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterField__c</fullName>
    <description>Items that are filtered for inclusion in this summary variable.</description>
    <inlineHelpText>Select the field to use when filtering items for inclusion in this summary variable.</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Product Code</fullName><default>false</default><label>Product Code</label></value>
            <value><fullName>Product Family</fullName><default>false</default><label>Product Family</label></value>
            <value><fullName>SBQQ__ChargeType__c</fullName><default>false</default><label>SBQQ__ChargeType__c</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>