force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__Scope__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Scope__c</fullName>
    <description>The scope of your summary variable.</description>
    <inlineHelpText>Enter the scope of your summary variable.</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>true</default><label>Quote</label></value>
            <value><fullName>Assets</fullName><default>false</default><label>Assets</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>