force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetObject__c</fullName>
    <description>Name of object being summarized.</description>
    <inlineHelpText>Select the object you want to aggregate.</inlineHelpText>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quote Line</fullName><default>false</default><label>Quote Line</label></value>
            <value><fullName>Product Option</fullName><default>false</default><label>Product Option</label></value>
            <value><fullName>Asset</fullName><default>false</default><label>Asset</label></value>
            <value><fullName>Subscription</fullName><default>false</default><label>Subscription</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>